Fixed styling, make the page responsive on mobile

--- a/frontend/src/component/learningHub/learningHub.css
+++ b/frontend/src/component/learningHub/learningHub.css
@@ -230,3 +230,28 @@
   font-size: 20px;
 
 }
+
+@media screen and (max-width: 600px) {
+  .grid2 {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 20px;
+  }
+  .container {
+    padding: 0;
+  }
+
+  .topic-button {
+    width: 100%;
+    margin: 4px auto;
+    padding: 1vh;
+  }
+
+  .courseCard {
+    padding: 1vh;
+  }
+
+  .coursesCard .items{
+    padding: 2vh;
+  }
+}
